# HoudiniLM

./: .env.example  .gitignore  INDIVIDUAL_EFFORT.md  LICENSE  Makefile  PRESENTATION.md  README.md  baseline-model.py  baseline_model.py  constants.py  demo_app.py  main.py  prefixes_suffixes.py  pyproject.toml  test_filtering.csv
CODE/: Makefile  pyproject.toml
dataset/: alan-similarity-evals.json  eval_judge.csv  judge-evals.json  kappa.py  reward_eval_dataset.csv  similarity-evals.json  small_test.csv  test_filtering.csv  train_dataset.csv  validation_dataset.csv
demo/: demo.py
evaluation/: base_hermes_beaver_results.json  base_hermes_jailbreak_results.json  combine.py  combined_results.csv  evaluate.py  final_evaluation.py  other_evaluations.py  strongreject_evaluation.csv  strongreject_evaluation.py  strongreject_evaluation1a.csv  strongreject_evaluation2.csv  strongreject_evaluation3.csv  strongreject_evaluation4.csv  strongreject_evaluation5.csv  strongreject_evaluation_nous.csv  strongreject_evaluation_rl3.csv  strongreject_evaluation_rl3_checkpoint.csv  test.ipynb
models/: baseline_model.py  model.py
playground/: embedding_similarity.py  llama-guard.py  openai-moderation-api.py  prompt-guard.py  question_filtering.py  strong-reject.csv  strong-reject.py  target-llm.py
reward_functions/: OpenAI_moderation.py  OpenAI_response_detection.py  OpenAI_similarity_judge.py  evaluate_reward_func.py  proxy_reward.py  reward_func_results.csv  strong_reject_reward.py
similarity/: embedding_similarity.py  llm-as-a-judge.py  llm_as_a_judge.py  rahul-llm-eval.json  (+1 more)
(+50 files in other folders)
