[project]
name = "houdinilm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.6.0",
    "datasets>=3.5.0",
    "nltk>=3.9.1",
    "openai>=1.75.0",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.6.1",
    "strong-reject",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "transformers>=4.51.3",
    "sentencepiece==0.2.0",
]

[tool.uv.sources]
strong-reject = { git = "https://github.com/dsbowen/strong_reject.git", rev = "main" }
